# bfs-x-delivery

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml
bfd/: __init__.py  __main__.py  bfs.py  browser_pool.py  cache.py  config.py  db.py  geocode.py  main.py  matcher.py  normalize.py
bfd/adapters/: base.py  ubereats.py  wolt.py
bfd/static/: index.html
docs/superpowers/plans/: 2026-05-10-bfd.md
docs/superpowers/specs/: 2026-05-10-bfd-design.md
tests/: test_adapters_ubereats.py  test_adapters_wolt.py  test_bfs.py  test_cache.py  test_db.py  test_e2e.py  test_geocode.py  test_matcher.py  test_normalize.py
tests/fixtures/: bfs_map_sample.json  nominatim_response.json  ubereats_feed.json  wolt_response.json
